# battle-engine

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  launch.py  pyproject.toml
.claude/: settings.json
.claude/agents/: extract-sprites.md
.claude/skills/fetch-sprites/: SKILL.md
.claude/skills/ship/: SKILL.md
assets/fonts/: undertale-attack-font-readme.txt  undertale-in-game-hud-font-license.txt
examples/: papyrus.py  testmode.py
examples/papyrus/: main.py
modules/: battle.py  constants.py  game.py  overworld.py  player.py  testmode.py  util.py
src/battle_engine/: __init__.py  _assets.py  battle.py  constants.py  drawing.py  fonts.py  game.py  interpolation.py  overworld.py  player.py  sound.py  text.py  util.py
src/battle_engine/battle/: __init__.py  core.py  enemy.py  objects.py  states.py  ui.py
tests/: conftest.py  test_imports.py  test_interpolation.py  test_player.py  test_singleton.py  test_sound.py  test_text.py
