[project]
name = "battle-engine"
version = "0.1.0"
description = "A pygame-based engine for Undertale-inspired battle sequences"
authors = [{name = "Kedlub", email = "jakubkyzr@gmail.com"}]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/battle_engine"]
